fix(overflow): 🐛 add scrollbar to main doc section

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css4?family=Lato&display=swap");
+
 :root {
   --blue: #08489b;
   --light-black: #16262d;
@@ -21,6 +23,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  font-family: "Lato", sans-serif;
 }
 
 #main-doc {
@@ -30,6 +33,7 @@ body {
   flex-direction: column;
   row-gap: 16px;
   color: white;
+  overflow-y: scroll;
 }
 
 #navbar {
